Bug 448352 - ViewMode Date style setting not stored
Summary: ViewMode Date style setting not stored
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: file list view (other bugs)
Version First Reported In: 21.12.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-13 09:35 UTC by Martin Koller
Modified: 2022-03-01 21:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2022-01-13 09:35:31 UTC
Using konqueror to view a directory in detail view mode.
The column "Modified" date/time shows relative time, e.g. "Two days ago", which
I wanted to change to display absolute time.
In konq settings I chose "View Modes -> Details -> Date Style -> Absolute..."

Strangely enough this page in the configure dialog has no OK or Apply button, just a Close.
Changing the setting and closing the dialog does not store the change.
When I reopen the settings dialog, I still see "Relative" time display.

(Changing the same setting inside dolphin does not act on konqurer settings. Dolphin itself uses the changed setting,
and dolphin also shows an OK and Apply button on that page)
Comment 1 Bug Janitor Service 2022-03-01 11:13:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/353
Comment 2 Stefano Crocco 2022-03-01 21:08:25 UTC
Git commit 505bf52f593a88a07925b0dbba7568535933fd23 by Stefano Crocco.
Committed on 01/03/2022 at 11:00.
Pushed by ngraham into branch 'master'.

Display Apply button in KCMs

When displaying the KCMs in another application's configuration dialog
(for example, in Konqueror), the Apply, Ok and Reset buttons aren't
shown. This issue is caused by a missing Apply flag in the call to
setButtons in the KCModule constructor.

the fact that in the call to setButtons
from the KCModule constructor, the Apply flag is missing.

M  +1    -1    src/settings/kcm/kcmdolphingeneral.cpp
M  +1    -1    src/settings/kcm/kcmdolphinnavigation.cpp
M  +1    -1    src/settings/kcm/kcmdolphinviewmodes.cpp

https://invent.kde.org/system/dolphin/commit/505bf52f593a88a07925b0dbba7568535933fd23