src/settings/kcm/kcmdolphingeneral.cpp
@@ -23,7 +23,7 @@ DolphinGeneralConfigModule::DolphinGeneralConfigModule(QWidget *parent, const QV
     KCModule(parent, args),
     m_pages()
 {
-    setButtons(KCModule::Default | KCModule::Help);
+    setButtons(KCModule::Default | KCModule::Help | KCModule::Apply);
 
     QVBoxLayout* topLayout = new QVBoxLayout(this);
     topLayout->setContentsMargins(0, 0, 0, 0);
